change fonts // bugfix on overflow-x // format code

--- a/styles/assets.css
+++ b/styles/assets.css
@@ -1,44 +1,44 @@
 .btn {
-    background-color: var(--main-color);
-    padding: 16px 20px;
-    font-weight: bold;
-    border: none;
-    border-radius: 24px;
-    box-shadow: 0px 0px 3px;
-    font-size: var(--font-size);
-    color: white;
-    transition: all var(--transition);
+  background-color: var(--main-color);
+  padding: 16px 20px;
+  font-weight: bold;
+  border: none;
+  border-radius: 24px;
+  box-shadow: 0px 0px 3px;
+  font-size: var(--font-size);
+  color: white;
+  transition: all var(--transition);
 }
 
 .btn:hover {
-    background-color: var(--main-color-hover);
-    color: var(--site-color);
-    scale: 1.1;
+  background-color: var(--main-color-hover);
+  color: var(--site-color);
+  scale: 1.1;
 }
 
 .d-flex {
-    display: flex;
+  display: flex;
 }
 
 .flex-a-center {
-    align-items: center;
+  align-items: center;
 }
 
 .flex-j-center {
-    justify-content: center;
+  justify-content: center;
 }
 
 .flex-all-center {
-    align-items: center;
-    justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .flex-a-start {
-    align-items: flex-start;
+  align-items: flex-start;
 }
 
 .t-left {
-    text-align: left;
+  text-align: left;
 }
 
 .pt-0 {
@@ -46,15 +46,19 @@
 }
 
 .pl-16 {
-    padding-left:16px;
+  padding-left: 16px;
 }
 
 .f-white {
-    color: white;
+  color: white;
+}
+
+.flex-col {
+  flex-direction: column;
 }
 
 @media (max-width: 600px) {
-    .btn {
-        margin: 24px 0;
-    }
+  .btn {
+    margin: 24px 0;
+  }
 }
